Externalized http base url to jallaby.properties